2008-05-26  Zoltan Varga  <vargaz@gmail.com>

	* number-formatter.h: Make some tables static.

	* class.c (mono_method_set_generic_container): New accessor function.
	(mono_method_get_generic_container): Ditto.

	* class-internals.h (struct _MonoMethod): Remove rarely used 
	'generic_container' field, store it in the property hash instead. Add 
	'is_generic' boolean field instead.

	* image.c (mono_image_init): Initialize property_hash.
	(mono_image_close): Destroy property_hash.

	* metadata-internals.h (struct _MonoImage): Add 'property_hash' hash table to
	hold rarely used fields of runtime structures belonging to this image.

	* class.c loader.c verify.c icall.c reflection.c: Use the new accessor functions
	to get/set method->generic_container.

	* loader.c (mono_get_method_from_token): Avoid loading the method header for
	generic methods.

2008-05-25  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_inflate_generic_method_full): Don't increase
	mono_stats.inflated_method_count for methods found in the cache.

	* threads.c (mono_thread_request_interruption): Add a comment about 
	QueueUserAPC ().

2008-05-24  Zoltan Varga  <vargaz@gmail.com>

	* class.c (setup_interface_offsets): Use sizeof (guint16) when allocating the
	interface_offsets_packed table.
	
	* class.c (mono_class_init): Remove some dead code.

	* icall.c (ves_icall_System_Reflection_Assembly_InternalGetType): Call
	mono_class_setup_vtable () when CAS is active to detect security problems.

2008-05-23 Rodrigo Kumpera  <rkumpera@novell.com>

	* verify.c (mono_delegate_type_equal): Handle VAR, MVAR and GENERICINST.

	* verify.c (mono_delegate_signature_equal): Don't compar number of generic
	parameters as it's irrelevant for delegate checking.

2008-05-23  Zoltan Varga  <vargaz@gmail.com>

	* class-internals.h class.c: Correct the name of the 'mono_no_setup_vtable_in_class_init' variable.

	* class.c (mono_class_init): Control the creation of a generic vtable using