@@ -1,3 +1,8 @@
+2008-05-27  Eyal Alaluf <eyala@mainsoft.com>
+
+	* number-formatter.h: Fix tables to avoid arithemtic overflow in
+	  Double.ToString as exposed by Bug #383531.
+
 2008-05-26  Zoltan Varga  <vargaz@gmail.com>
 
 	* number-formatter.h: Make some tables static.
